asset/Deployment/K8/tito-sql-pods.yml
apiVersion: v1
kind: Pod
metadata:
  generateName: titosql-
  labels:
    name: tito-sql
    version: "1.5.1"
    app: tito
    tiers: tito-sql
spec:
  containers:
    - name: tito-sql
      image: vmeoc/tito-sql:V1.5
      ports:
      - containerPort: 3306
