asset/Deployment/K8/Tito.yml
apiVersion: v1
kind: ReplicationController
metadata:
  name: titofe
  labels:
    name: tito-fe
    version: "1.7.1" #1.7.1 contain dynamic variable setting through env variable. with special check for K8
    app: tito
    tiers: tito-fe
spec:
  replicas: 3
  selector:
    type: tito-fe
  template:
    metadata:
      labels:
        app: tito
        type: tito-fe
    spec:
      containers:
        - name: tito
          image: vmeoc/tito-fe:V1.7.1
          ports:
          - containerPort: 80
apiVersion: v1
kind: ReplicationController
metadata:
  name: titofe
  labels:
    name: tito-fe
    version: "1.7.1" #1.7.1 contain dynamic variable setting through env variable. with special check for K8
    app: tito
    tiers: tito-fe
spec:
  replicas: 3
  selector:
    type: tito-fe
  template:
    metadata:
      labels:
        app: tito
        type: tito-fe
    spec:
      containers:
        - name: tito
          image: vmeoc/tito-fe:V1.7.1
          ports:
          - containerPort: 80
apiVersion: v1
kind: Pod
metadata:
  generateName: titosql-
  labels:
    name: tito-sql
    version: "1.5"
    app: tito
    tiers: tito-sql
spec:
  containers:
    - name: tito-sql
      image: vmeoc/tito-sql:V1.5
      ports:
      - containerPort: 3306
apiVersion: v1
kind: Service
metadata:
  name: tito-sql-service
  labels:
    app: tito
    tiers: tito-sql
spec:
  ports:
      - port: 3306               # port expose par docker  (pas le port dans le container)
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    tiers: tito-sql
