asset/Deployment/K8/tito-sql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: titofe-service
  labels:
    app: tito
    tiers: tito-sql
spec:
  ports:
      - port: 3306               # port expose par docker  (pas le port dans le container)
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    tiers: tito-sql
